--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -722,6 +722,10 @@
       - 坠星:30:50
       - 金币:20
       - 超级治疗药水:5:15
+      - 日耀碎片:18:25
+      - 星璇碎片:18:25
+      - 星云碎片:18:25
+      - 星尘碎片:18:25
   月球领主:
     1:
       giveAllItems: false
