--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/items.yml
@@ -1972,7 +1972,10 @@
   - §6专家模式物品
   - §r广大泰拉玩家的精神结晶
   - §r在最早时期你会获得多个属性的少量增幅
-  - §r击败里程碑级别的BOSS后增幅更加强力
+  - §r击败特定BOSS后增幅更加强力，这些BOSS包括：
+  - §r克苏鲁之眼，腐巢意志，史莱姆之神，血肉之墙
+  - §r极地之灵，硫磺火元素，世纪之花，光之女皇，星神游龙，月球领主
+  - §7(敬请期待) 亵渎天神，神明吞噬者，丛林龙，星流巨械，至尊灾厄
   - §r感谢众多支持者的努力，让泰拉瑞亚以及灾厄成为现实
   worth: 12000000
   rarity: 1000
