resource pack tweak

--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/the_hive_goliath_rocket.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/the_hive_goliath_rocket.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj0_5
 texture=the_hive_goliath_rocket
-nbt.display.Name=\u761f\u75ab\u5bfc\u5f39
+nbt.display.Name=regex:\u761f\u75ab\u5bfc\u5f39|\u6b4c\u8389\u5a05\u761f\u75ab\u5bfc\u5f39
