--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/mobSpawning.yml
@@ -60,8 +60,9 @@ spawnInfo:
         蚁狮马: 1
         风暴蚁狮: 0.25
     sunken_sea:
-        水母: 100
+        水母: 20
         巨像蛤: 1
+        肉后巨像蛤: 1
     jungle_day:
         丛林蝙蝠: 10
         丛林史莱姆: 10
