post-moon lord sword update and bugfix

--- a/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
+++ b/[绵羊服]泰拉瑞亚RPG灾厄服务端/server/plugins/Terraria/Data/crates.yml
@@ -336,7 +336,8 @@
       - 贝壳:30:40
       - 天蓝石:1:1:0.3333
       - 伏打凝胶:1:1:0.3333
-      - 金币
+      - 金币:2
+      - 弱效治疗药水:5:15
     2:
       giveAllItems: false
       items:
@@ -379,6 +380,8 @@
     2:
       items:
       - 发光蘑菇:25:35
+      - 金币:5
+      - 弱效治疗药水:5:15
   世界吞噬者:
     1:
       items:
@@ -386,7 +389,7 @@
       - 蠕虫围巾
       - 恶魔矿:30:59
       - 暗影鳞片:10:19
-      - 金币:3
+      - 金币:5
       - 弱效治疗药水:5:15
   腐巢意志:
     1:
@@ -403,6 +406,8 @@
       - 腐肉:15:20
       - 恶魔锭:15:20
       - 腐烂物质:30:40
+      - 金币:10
+      - 治疗药水:5:15
     3:
       progressRequired: 血肉之墙
       items:
@@ -413,8 +418,8 @@
       - 骨头手套
       - 骨头:30:60
       - 骷髅头法书:1:1:0.3333
-      - 金币:5
-      - 弱效治疗药水:5:15
+      - 金币:15
+      - 治疗药水:5:15
   史莱姆之神:
     1:
       giveAllItems: false
@@ -424,6 +429,8 @@
       - 诡触之书
       - 腐化史莱姆召唤杖
       - 血腥史莱姆召唤杖
+      - 金币:20
+      - 治疗药水:5:15
     2:
       items:
       - 魔能谐振仪
@@ -451,7 +458,7 @@
       items:
       - 恶魔之心
       - 屠杀:1:1:0.1
-      - 金币:8
+      - 金币:25
       - 治疗药水:5:15
   史莱姆皇后:
     1:
@@ -466,7 +473,7 @@
       - 失谐钩爪:1:1:0.3333
       - 刃杖:1:1:0.3333
       - 挥发明胶
-      - 金币:10
+      - 金币:30
       - 强效治疗药水:5:15
   极地之灵:
     1:
@@ -480,7 +487,7 @@
       items:
       - 极寒之魂
       - 冰川精华:5:9
-      - 金币:12
+      - 金币:40
       - 强效治疗药水:5:15
   双子魔眼:
     1:
@@ -489,7 +496,7 @@
       - 视域之魂:25:40
       - 机械车轮片
       - 劲弩:1:1:0.1
-      - 金币:12
+      - 金币:35
       - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
@@ -507,7 +514,7 @@
       items:
       - 海之烧灼:1:1:0.1
       - 核燃料棒:1:1:0.3333
-      - 金币:12
+      - 金币:30
       - 强效治疗药水:5:15
   毁灭者:
     1:
@@ -515,7 +522,7 @@
       - 强效治疗药水:5:15
       - 力量之魂:25:40
       - 机械车体片
-      - 金币:12
+      - 金币:35
       - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
@@ -534,7 +541,7 @@
       - 地狱降临:1:1:0.1
       - 魔鬼之庇护
       - 混乱精华:5:9
-      - 金币:12
+      - 金币:40
       - 强效治疗药水:5:15
   机械骷髅王:
     1:
@@ -542,7 +549,7 @@
       - 强效治疗药水:5:15
       - 恐惧之魂:25:40
       - 机械电池片
-      - 金币:12
+      - 金币:35
       - 强效治疗药水:5:15
     2:
       progressRequired: 机械三王
@@ -564,7 +571,7 @@
       - 混乱之息:1:1:0.1
       - 灾厄尘:30:35
       - 混乱精华:10:15
-      - 金币:15
+      - 金币:50
       - 强效治疗药水:5:15
   世纪之花:
     1:
@@ -584,7 +591,7 @@
       - 矮人法杖:1:1:0.5
       - 刺钩:1:1:0.1
       - 叶流:1:1:0.1
-      - 金币:15
+      - 金币:50
       - 强效治疗药水:5:15
   阿娜希塔和利维坦:
     1:
@@ -599,7 +606,7 @@
       items:
       - 利维坦龙涎香
       - 归一心元石
-      - 金币:15
+      - 金币:60
       - 强效治疗药水:5:15
   白金星舰:
     1:
@@ -615,7 +622,7 @@
       - 星尘:30:40
       - 坠星:20:30
       - 星爆核心:1:1:0.3333
-      - 金币:15
+      - 金币:60
       - 强效治疗药水:5:15
   石巨人:
     1:
@@ -631,7 +638,7 @@
       - 日光精华:10:12
       - 锯刃镐:1:1:0.3333
       - 庇护之刃:1:1:0.1
-      - 金币:15
+      - 金币:60
       - 强效治疗药水:5:15
   瘟疫使者歌莉娅:
     1:
@@ -653,7 +660,7 @@
       - 毒刺:4:8
       - 瘟疫细胞罐:25:30
       - 瘟疫装甲镀层:30:35
-      - 金币:18
+      - 金币:75
       - 强效治疗药水:5:15
   光之女皇:
     1:
@@ -667,7 +674,7 @@
       items:
       - 翱翔徽章
       - 女皇之翼:1:1:0.1
-      - 金币:18
+      - 金币:75
       - 强效治疗药水:5:15
   猪鲨公爵:
     1:
@@ -681,7 +688,7 @@
       items:
       - 猪鲨之翼:1:1:0.1
       - 海爵剑:1:1:0.1
-      - 金币:18
+      - 金币:75
       - 强效治疗药水:5:15
   毁灭魔像:
     1:
@@ -700,7 +707,7 @@
       items:
       - 维苏威阿斯:1:1:0.1
       - 血肉晶簇
-      - 金币:18
+      - 金币:75
       - 强效治疗药水:5:15
     4:
       progressRequired: 亵渎天神，普罗维登斯
@@ -720,7 +727,7 @@
       - 星神隐壳
       - 星尘:60:90
       - 坠星:30:50
-      - 金币:20
+      - 铂金币
       - 超级治疗药水:5:15
       - 日耀碎片:18:25
       - 星璇碎片:18:25
@@ -729,6 +736,7 @@
   月球领主:
     1:
       giveAllItems: false
+      amountToGive: 2
       items:
       - 月亮传送门法杖
       - 七彩水晶法杖
@@ -745,5 +753,169 @@
       - 天界之翼
       - 夜明矿:90:110
       - 彩虹猫矿车:1:1:0.1
-      - 金币:20
+      - 铂金币
       - 超级治疗药水:5:15
+  痴愚金龙:
+    1:
+      giveAllItems: false
+      items:
+      - 殷红鞭笞
+      - 镀金鸟喙
+      - 黄金之鹰
+    2:
+      items:
+      - 痴愚金龙干细胞
+      - 爆破剑:1:1:0.1
+      - 闪耀金羽:15:21
+      - 铂金币:1
+      - 金币:25
+      - 超级治疗药水:5:15
+  亵渎天神，普罗维登斯:
+    1:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 极乐升天炮
+      - 耀目穿刺者杖
+      - 圣火之刃
+      - 日炎
+      - 净化激光炮
+      - 地核之炎
+    2:
+      items:
+      - 渎火核心
+      - 纯元怒焰:1:1:0.1
+      - 神圣晶石:30:40
+      - 浊火精华:25:35
+      - 铂金币:3
+      - 至尊治疗药水:5:15
+  无尽虚空:
+    1:
+      giveAllItems: false
+      items:
+      - 镜之刃:1:1:0.3333
+      - 幽冥统御:1:1:0.3333
+    2:
+      items:
+      - 进化者
+      - 暗物质:6:9
+      - 铂金币:2
+      - 至尊治疗药水:5:15
+  风暴编织者:
+    1:
+      giveAllItems: false
+      items:
+      - 风暴:1:1:0.3333
+      - 风暴龙骑士:1:1:0.3333
+    2:
+      items:
+      - 雷暴雨:1:1:0.1
+      - 装甲外壳:6:9
+      - 铂金币:2
+      - 至尊治疗药水:5:15
+  神之使徒西格纳斯:
+    1:
+      giveAllItems: false
+      items:
+      - 无限之灯:1:1:0.3333
+    2:
+      items:
+      - 扭曲虚空:6:9
+      - 铂金币:2
+      - 至尊治疗药水:5:15
+  噬魂幽花:
+    1:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 女妖之爪
+      - 鬼火弓
+      - 幽花之主
+      - 命运神启
+      - 鬼之形
+      - 惊惧魂刃
+    2:
+      items:
+      - 灾劫之尖啸
+      - 毁灭之灵:10:20
+      - 幻魂:40:50
+      - 铂金币:3
+      - 至尊治疗药水:5:15
+  硫海遗爵:
+    1:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 阴险穿刺者
+      - 腐臭倾泻者
+      - 剧毒叉枪
+      - 酸蚀毒蝰
+      - 干缩腐尸
+    2:
+      items:
+      - 硫海遗爵之鳞:1:1:0.1
+      - 铂金币:4
+      - 至尊治疗药水:5:15
+  神明吞噬者:
+    1:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 死亡冰雹
+      - 宙能波纹剑
+      - 混沌射线
+      - 死亡之风
+      - 星宇神卫召唤杖
+    2:
+      items:
+      - 星云之核
+      - 寒宙弹刃:1:1:0.1
+      - 宇宙锭:30:40
+      - 铂金币:6
+      - 终极治疗药水:5:15
+  丛林龙，犽戎:
+    1:
+      giveAllItems: false
+      amountToGive: 2
+      items:
+      - 巨龙七星灯
+      - 巨龙之息
+      - 星火凤凰雨
+      - 巨龙之怒
+      - 小鸡大炮
+      - 焚灭天惩
+    2:
+      items:
+      - 魔君的礼物
+      - 魔君水晶:1:1:0.1
+      - 龙魂碎片:30:35
+      - 铂金币:10
+      - 终极治疗药水:5:15
+  星流巨械:
+    1:
+      giveAllItems: false
+      items:
+      - 光子撕裂者
+      - 星耦狱锁
+      - 塔纳托斯的脊柱
+      - 煌晖御流炮
+    2:
+      items:
+      - 嘉登之心
+      - 星流棱晶:30:40
+      - 铂金币:30
+      - 终极治疗药水:5:15
+  至尊灾厄:
+    1:
+      giveAllItems: false
+      items:
+      - 诘责
+      - 狞桀
+      - 异端
+      - 永劫
+      - 恣睢
+    2:
+      items:
+      - 湮灭余烬:30:40
+      - 铂金币:30
+      - 终极治疗药水:5:15
