--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/crystal_spike.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/crystal_spike.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj0_25
 texture=crystal_spike
-nbt.display.Name=\u6c34\u6676
+nbt.display.Name=\u53f2\u83b1\u59c6\u6c34\u6676
