--- a/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/slime_spike.properties
+++ b/[绵羊服]泰拉瑞亚RPG客户端/泰拉瑞亚材质包/assets/minecraft/mcpatcher/cit/item/projectile/slime_spike.properties
@@ -2,4 +2,4 @@ type=item
 items=438
 model=_proj0_25
 texture=slime_spike
-nbt.display.Name=\u5c16\u523a
+nbt.display.Name=\u53f2\u83b1\u59c6\u5c16\u523a
